--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "hugo serve english",
+            "label": "hugo-verify",
             "type": "process",
             "command": "./Launch",
             "presentation": {
@@ -16,7 +16,7 @@
             },
             "group": {
                 "kind": "build",
-                "isDefault": true
+                "isDefault": false
             },
             "osx": {
                 "command": "./Launch"
@@ -25,14 +25,80 @@
                 "command": ".\\Launch.exe"
             },
             "args": [
-                "serve",
-                "--renderStaticToDisk",
+                "verify",
                 "browse=http://localhost:1313/",
                 "page=${file}",
                 "language=en"
             ],
-            "options": {
+        "options": {
                 "cwd": "${workspaceFolder}/themes/rhino3d.com-theme/script/Launch"
+            }
+        },
+        {
+            "label": "hugo-verify-all-languages",
+            "type": "process",
+            "command": "./Launch",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": false,
+                "clear": true,
+                "group": "Hugo"
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": false
+            },
+            "osx": {
+                "command": "./Launch"
+            },
+            "windows": {
+                "command": ".\\Launch.exe"
+            },
+            "args": [
+                "verify",
+                "browse=http://localhost:1313/",
+                "page=${file}"
+            ],
+        "options": {
+                "cwd": "${workspaceFolder}/themes/rhino3d.com-theme/script/Launch"
+            }
+        },
+        {
+            "label": "hugo serve english",
+            "dependsOn": [
+                "hugo-verify"
+            ],
+            "type": "process",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": false,
+                "clear": true,
+                "group": "Hugo"
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": false
+            },
+            "osx": {
+                "command": "./hugo",
+            },
+            "windows": {
+                "command": ".\\hugo.exe",
+            },
+            "args": [
+                "serve",
+                "--renderStaticToDisk",
+                "-e",
+                "development"
+            ],
+            "options": {
+                "cwd": "${workspaceFolder}/"
             }
         },
         {
@@ -91,7 +157,10 @@
                 "--renderStaticToDisk",
                 "-e",
                 "production"
-            ]
+            ],
+            "options": {
+                "cwd": "${workspaceFolder}/"
+            }
         },
         {
             "label": "hugo terminate",
@@ -127,6 +196,31 @@
                 "reveal": "always"
             },
             "problemMatcher": []
+        },
+        {
+            "label": "Build Launch",
+            "type": "shell",
+            "command": "dotnet",
+            "args": [
+                "build",
+                "-c", "Debug",
+                "${workspaceFolder}/themes/rhino3d.com-theme/script/Launch/Launch.csproj"
+            ],
+            "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "Publish Launch",
+            "type": "shell",
+            "windows": {
+                "command": "./publish.bat"
+            },
+            "osx": {
+                "command": "./publish.sh"
+            },
+            "problemMatcher": "$msCompile",
+            "options": {
+                "cwd": "${workspaceFolder}/themes/rhino3d.com-theme/script/Launch"
+            }
         }
     ],
     "inputs": [
