Revert "Dialog improvements"
This reverts commit 0f5d40698d5e1f3ad594e33c173cd3a622b87007.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "git.ignoreLimitWarning": true,
-    "github.copilot.editor.enableAutoCompletions": true
+    "github.copilot.inlineSuggest.enable": true
 }
