Discard changes to .vscode/settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "git.ignoreLimitWarning": true,
-    "github.copilot.editor.enableAutoCompletions": true
+    "git.ignoreLimitWarning": true
 }
