--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -195,28 +195,28 @@ target = 'assets'
   [languages.de]
     contentDir = "content/de"
     languageName = "German"
-    title = "Rhino Developer Docs"
+    title = "Rhino-Entwicklerdokumente"
     weight = 1
     [languages.de.params]
-      description = "Rhino is a 3D modeler used to create, edit, analyze, document, render, animate, and translate NURBS* curves, surfaces, and solids, point clouds, SubD surfaces, and polygon meshes. There are no limits on complexity, degree, or size beyond those of your hardware."
+      description = "Rhino ist ein 3D-Modellierer, der zum Erzeugen, Bearbeiten, Analysieren, Dokumentieren, Rendern, Animieren und Übersetzen von NURBS*-Kurven, -Flächen und -Volumenkörpern, Punktwolken, SubD-Flächen und Polygonnetzen verwendet wird. Es gibt keine Grenzen bezüglich Komplexität, Grad oder Größe, außer der durch Ihre Hardware bedingten."
       author = "Robert McNeel & Associates"
-      copyright = "Copyright © 1993-{year} Robert McNeel & Associates. All Rights Reserved."
+      copyright = "Copyright © 1993-{year} Robert McNeel & Associates. Alle Rechte vorbehalten."
       siteNav = "original-site-navigation"
       imagesDir = "images"
       docLang = "de-de" # the language code used on docs.mcneel.com
     [languages.de.taxonomies]
-      "tag" = "tags"
-      "category" = "categories"
-      "platform" = "platforms"
-      "task" = "tasks"
-      "level" = "levels"
-      "version" = "versions"
+      "Beschriftung" = "Beschriftungen"
+      "Kategorie" = "Kategorien"
+      "Plattform" = "Plattformen"
+	  "Aufgabe" = "Aufgaben"
+	  "Stufe" = "Stufen"
+	  "Version" = "Versionen"
     [languages.de.menu]
       [[languages.en.menu.main]]
         identifier = "guides"
         pre = ""
         post = ""
-        name = "Guides"
+        name = "Handbücher"
         url = "/guides"
         title = ""
         weight = 2
@@ -224,7 +224,7 @@ target = 'assets'
         identifier = "samples"
         pre = ""
         post = ""
-        name = "Samples"
+        name = "Beispiele"
         url = "/samples"
         title = ""
         weight = 3
@@ -316,22 +316,22 @@ target = 'assets'
   [languages.fr]
     contentDir = "content/fr"
     languageName = "Français"
-    title = "Rhino Developer Docs"
+    title = "Documentation pour les développeurs de Rhino"
     weight = 1
     [languages.fr.params]
-      description = "Rhino is a 3D modeler used to create, edit, analyze, document, render, animate, and translate NURBS* curves, surfaces, and solids, point clouds, SubD surfaces, and polygon meshes. There are no limits on complexity, degree, or size beyond those of your hardware."
+      description = "Rhino est un modeleur 3D utilisé pour créer, éditer, analyser, documenter, rendre, animer et traduire des courbes et des surfaces NURBS* ainsi que des solides, des nuages de points, des surfaces SubD et des maillages. Il n’a aucune limite en termes de complexité, de degré ou de taille, en dehors de celles de votre matériel."
       author = "Robert McNeel & Associates"
-      copyright = "Copyright © 1993-{year} Robert McNeel & Associates. All Rights Reserved."
+      copyright = "Copyright © 1993-{year}, Robert McNeel & Associates. Tous droits réservés."
       siteNav = "original-site-navigation"
       imagesDir = "images"
       docLang = "fr-fr" # the language code used on docs.mcneel.com
     [languages.fr.taxonomies]
-      "tag" = "tags"
-      "category" = "categories"
-      "platform" = "platforms"
-      "task" = "tasks"
-      "level" = "levels"
-      "version" = "versions"
+      "étiquette" = "étiquettes"
+      "catégorie" = "catégories"
+	  "plateforme" = "plateformes"
+	  "tâche" = "tâches"
+	  "niveau" = "niveaux"
+	  "version" = "versions"
     [languages.fr.menu]
       [[languages.en.menu.main]]
         identifier = "guides"
@@ -345,7 +345,7 @@ target = 'assets'
         identifier = "samples"
         pre = ""
         post = ""
-        name = "Samples"
+        name = "Exemples"
         url = "/samples"
         title = ""
         weight = 3
@@ -361,7 +361,7 @@ target = 'assets'
         identifier = "videos"
         pre = ""
         post = ""
-        name = "Videos"
+        name = "Vidéos"
         url = "/videos"
         title = ""
         weight = 5
@@ -369,35 +369,35 @@ target = 'assets'
         identifier = "community"
         pre = ""
         post = ""
-        name = "Community"
+        name = "Communauté"
         url = "https://discourse.mcneel.com/c/rhino-developer"
         title = ""
         weight = 6
   [languages.it]
     contentDir = "content/it"
     languageName = "Italiano"
-    title = "Rhino Developer Docs"
+    title = "Documentazione per lo sviluppo di Rhino"
     weight = 1
     [languages.it.params]
-      description = "Rhino is a 3D modeler used to create, edit, analyze, document, render, animate, and translate NURBS* curves, surfaces, and solids, point clouds, SubD surfaces, and polygon meshes. There are no limits on complexity, degree, or size beyond those of your hardware."
+      description = "Rhino è un modellatore 3D usato per creare, modificare, analizzare, e ancora, documentare, renderizzare, animare e tradurre curve e superfici NURBS*, così come solidi, nuvole di punti, superfici SubD e mesh poligonali. Non ci sono limiti di complessità, grado o dimensioni a parte quelli legati all'hardware."
       author = "Robert McNeel & Associates"
-      copyright = "Copyright © 1993-{year} Robert McNeel & Associates. All Rights Reserved."
+      copyright = "Copyright © 1993-{year} Robert McNeel & Associates. Tutti i diritti riservati."
       siteNav = "original-site-navigation"
       imagesDir = "images"
       docLang = "it-it" # the language code used on docs.mcneel.com
     [languages.it.taxonomies]
-      "tag" = "tags"
-      "category" = "categories"
-      "platform" = "platforms"
-      "task" = "tasks"
-      "level" = "levels"
-      "version" = "versions"
+      "etichetta" = "etichette"
+      "categoria" = "categorie"
+	  "piattaforma" = "piattaforme"
+	  "attività" = "attività"
+	  "livello" = "livelli"
+	  "versione" = "versioni"
     [languages.it.menu]
       [[languages.it.menu.main]]
         identifier = "guides"
         pre = ""
         post = ""
-        name = "Guides"
+        name = "Guide"
         url = "/guides"
         title = ""
         weight = 2
@@ -405,7 +405,7 @@ target = 'assets'
         identifier = "samples"
         pre = ""
         post = ""
-        name = "Samples"
+        name = "Esempi"
         url = "/samples"
         title = ""
         weight = 3
@@ -421,7 +421,7 @@ target = 'assets'
         identifier = "videos"
         pre = ""
         post = ""
-        name = "Videos"
+        name = "Video"
         url = "/videos"
         title = ""
         weight = 5
@@ -429,7 +429,7 @@ target = 'assets'
         identifier = "community"
         pre = ""
         post = ""
-        name = "Community"
+        name = "Comunità"
         url = "https://discourse.mcneel.com/c/rhino-developer"
         title = ""
         weight = 6
